# pyoci

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml  justfile  pyproject.toml  release-please-config.json  renovate.json  sonar-project.properties  wrangler.toml
.github/: dependabot.yml  release.yml
.github/workflows/: clean_examples.yaml  deploy.yaml  examples.yaml  pr-title.yaml  publish.yaml  release-please.yaml  sonar.yaml  test.yaml
docker/: Dockerfile  docker-compose.yaml  target-platform.sh
docker/config/: config.yaml
docker/config/tls/: tls.key
docs/: design.md
docs/examples/: README.md  justfile
docs/examples/poetry/: README.md  pyproject.toml
docs/examples/poetry/install/: pyproject.toml
docs/examples/poetry/publish/: poetry.toml  pyproject.toml
docs/examples/uv/: .gitignore
docs/examples/uv/install/: pyproject.toml
docs/examples/uv/publish/: pyproject.toml
js/: cf_worker.js
py/: pyproject.toml
py/docker/config/: config.yaml
py/docker/config/tls/: tls.crt
py/pyoci/: __main__.py
py/pyoci/oci/: __init__.py  client.py  layer.py
py/pyoci/server/: __init__.py
py/tests/testdata/: test_package-0.1.0-py3-none-any.whl
pyoci/: __init__.py  __main__.py  client.py  descriptor.py  index.py  layer.py  manifest.py
pyoci/oci/: __init__.py  client.py  config.py  descriptor.py  index.py  layer.py  manifest.py  package.py
pyoci/server/: __init__.py
pyoci/server/templates/: list-package.html
pyoci_cli/: Cargo.toml
pyoci_cli/src/: main.rs  sync_transport.rs
pyoci_worker/: Cargo.toml
pyoci_worker/src/: lib.rs  templates.rs  transport.rs
pyoci_worker/templates/: list-package.html
src/: app.rs  cf.rs  client.rs  error.rs  lib.rs  main.rs  middleware.rs  mocks.rs  oci.rs  otlp.rs  package.rs  pyoci.rs  templates.rs  time.rs  transport.rs
src/js/: cf_worker.js  pyoci.js
src/otlp/: log.rs  metrics.rs  mod.rs  trace.rs
src/service/: auth.rs  log.rs  mod.rs
templates/: list-package.html
tests/: conftest.py  test_integration.py  test_package.py
tests/dep-test/: pyproject.toml
tests/hello-world/: README.md  poetry.toml  pyproject.toml
tests/testdata/: test_package-0.1.0.dev4+g1664eb2.d20231017-cp311-cp311-macosx_13_0_x86_64.whl
