[package]
name = "pyoci"
version = "0.1.17"
edition = "2021"
authors = ["Allex Veldman"]
description = "Let any OCI compliant registry act as a PyPi index"
repository = "https://github.com/allexveldman/pyoci"
homepage = "https://github.com/AllexVeldman/pyoci/blob/main/README.md"
license = "MIT"

[[bin]]
name = "pyoci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"

[features]
default = ["otlp"]
otlp = [
    "dep:opentelemetry-proto",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:tracing-core",
    "dep:prost",
]


[dependencies]
exitcode = "1.1.2"
oci-spec = { version = "0.7.1", default-features = false, features = ["image", "distribution"] }
url = "2.5.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
askama = { version = "0.12.1", default-features = false }
base64 = "0.22.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
urlencoding = "2.1.3"
anyhow = "1.0.95"
http = "1.2.0"
tower = { version = "0.5.1", features = ["util"] }
async-trait = "0.1.83"
pin-project = "1.1.7"
futures = "0.3.31"
time = { version = "0.3.37", features = ["formatting"] }
axum = { version = "0.7.9", default-features = false, features = ["multipart","macros", "tokio", "http1", "json"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7.13"

# OTLP dependencies
opentelemetry-proto = { version = "0.27.0", default-features = false, features = ["gen-tonic-messages", "logs", "trace", "metrics"], optional = true }
opentelemetry = { version = "0.27.1", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.27.1", default-features = false, features = ["trace"], optional = true }
tracing-core = {version = "0.1.32", optional = true }
prost = {version = "0.13.3", optional = true }



[dev-dependencies]
futures-util = "0.3.31"
indoc = "2.0.5"
mockito = "1.6.1"
test-case = "3.3.1"
tokio = { version = "1.41.1", features = ["test-util"]}
bytes = "1.8.0"
reqwest = { version = "0.12.9", default-features = false, features = ["stream"] }
