[package]
name = "pyoci"
version = "0.1.30"
edition = "2021"
authors = ["Allex Veldman"]
description = "Let any OCI compliant registry act as a PyPi index"
repository = "https://github.com/allexveldman/pyoci"
homepage = "https://github.com/AllexVeldman/pyoci/blob/main/README.md"
license = "MIT"

[[bin]]
name = "pyoci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"

[dependencies]
exitcode = "1.1.2"
oci-spec = { version = "0.8.2", default-features = false, features = ["image", "distribution"] }
url = "2.5.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
base16ct = { version = "0.2.0", features = ["alloc"] }
urlencoding = "2.1.3"
anyhow = "1.0.100"
http = "1.3.1"
tower = { version = "0.5.2", features = ["util"] }
async-trait = "0.1.89"
pin-project = "1.1.10"
futures = "0.3.31"
time = { version = "0.3.44", features = ["formatting"] }
axum = { version = "0.8.5", default-features = false, features = ["multipart","macros", "tokio", "http1", "json"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7.16"
opentelemetry-proto = { version = "0.31.0", default-features = false, features = ["gen-tonic-messages", "logs", "trace", "metrics"]}
tracing-core = {version = "0.1.34"}
prost = {version = "0.14.1"}
axum-extra = { version = "0.10.2", default-features = false }
rand = "0.9.2"
handlebars = { version = "6.3.2", default-features = false }


[dev-dependencies]
futures-util = "0.3.31"
indoc = "2.0.6"
mockito = "1.7.0"
test-case = "3.3.1"
tokio = { version = "1.47.1", features = ["test-util"]}
bytes = "1.10.1"
reqwest = { version = "0.12.23", default-features = false, features = ["stream"] }
pretty_assertions = "1.4.1"
