[package]
name = "pyoci_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyoci = { path = "../" }
clap = { version = "4.4.11", features = ["derive"]}
ureq = { version = "2.9.4", features = ["json", "http-crate"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
base64 = "0.22.0"
serde = { version = "1.0.193", features = ["derive"] }
url = "2.3.1"
oci-spec = { version = "0.6.4", default-features = false, features = ["image", "distribution"] }
