[tool.poetry]
name = "hello-world"
version = "0.1.0+1234"
description = "demo package to demonstrate pyoci"
authors = ["Allex Veldman <allexveldman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
