[tool.poetry]
name = "install"
version = "0.1.0"
description = ""
authors = ["Allex Veldman <allexveldman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hello-world = {version = "^0.0.1", source = "pyoci"}

[[tool.poetry.source]]
name = "pyoci"
url = "https://pyoci.com/ghcr.io/allexveldman/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
