[tool.poetry]
name = "hello-world"
version = "0.0.1"
description = "Example project for PyOCI with poetry"
authors = ["Allex Veldman <allexveldman@gmail.com>"]
homepage = "https://pyoci.com"
repository = "https://github.com/allexveldman/pyoci"
documentation = "https://github.com/allexveldman/pyoci/README.md"

classifiers = [
    "PyOCI :: Label :: org.opencontainers.image.url :: https://github.com/allexveldman/pyoci",
    "PyOCI :: Label :: org.opencontainers.image.description :: Published using PyOCI as part of the examples."
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
